Archive2/0f/bcbc33b2adbf9b/output
main.cpp:7:5: error: static_assert failed "ImmRef requires a constant."
    static_assert ( std::is_const< T >::value, "ImmRef requires a constant." );
    ^               ~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:16:12: note: in instantiation of template class 'ImmRef<int>' requested here
auto bad = MAKE_IMMREF( nc );
           ^
main.cpp:3:29: note: expanded from macro 'MAKE_IMMREF'
#define MAKE_IMMREF( NAME ) ImmRef< decltype( NAME ) >{ NAME }
                            ^
1 error generated.
